--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
-            Web <span class="logo-item">Studio</span></a
-          >
+            Web <span class="logo-item">Studio</span></a>
           <ul class="header-list list">
             <li class="header-item">
               <a class="header-link link curent" href="./index.html">Studio</a>
@@ -43,14 +38,10 @@
         <address class="header-address">
           <ul class="header-address-list list">
             <li>
-              <a class="header-mail link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a class="header-mail link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="header-mail link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -129,11 +120,7 @@
               <img src="./images/img2.jpg" alt="phone" width="360" />
             </li>
             <li class="pictures-item">
-              <img
-                src="./images/img3.jpg"
-                alt="phone and computer"
-                width="360"
-              />
+              <img src="./images/img3.jpg" alt="phone and computer" width="360" />
             </li>
           </ul>
         </div>
@@ -346,8 +333,7 @@
     <footer class="footer section section-footer">
       <div class="container container-item">
         <div class="footer-container">
-          <a class="footer-logo link" href="./index.html"
-            >Web <span class="footer-logo-item">Studio</span>
+          <a class="footer-logo link" href="./index.html">Web <span class="footer-logo-item">Studio</span>
           </a>
           <p class="footer-text top-text">
             Increase the flow of customers and sales for your business with
@@ -387,17 +373,74 @@
             </li>
           </ul>
         </div>
+        <div class="footer-sub">
+          <p class="footer-title">Subscribe</p>
+          <form class="footer-form"><input name="footer-email" placeholder="E-mail" type="email" class="footer-input">
+            <button type="submit" class="footer-button">
+              Subscribe
+              <svg class="footer-sub-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-plan"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
+     
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="btn-close-modal" data-modal-close type="button"> 
+        <button class="btn-close-modal" data-modal-close type="button">
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-fild">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrap">
+              <input id="user-name" type="text" class="modal-input">
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fild">
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input type="text" id="user-phone" name="user-phone" class="modal-input">
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fild">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="modal-input-wrap">
+              <input type="text" name="user-email" id="user-email" class="modal-input">
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fild texteria-fild"><label for="user-comment" class="modal-label">Comment</label><textarea name="user-comment" placeholder="Text input" id="user-comment" cols="30" rows="10"
+              class="modal-coment"></textarea></div>
+          <div class="modal-fild modal-fild-chek"><input type="checkbox" name="user-privacy" class="input-chek visually-hidden" id="user-privacy">
+            <label for="user-privacy" class="input-chek-text">
+              <span class="chek-empty">
+                <svg class="input-chek-icon" width="10" height="8">
+                  <use href="./images/symbol-defs.svg#icon-chek"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the  <a href="" class="input-chek-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="modal-button">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
+
 </html>
