--- a/portfolio.html
+++ b/portfolio.html
@@ -247,6 +247,17 @@
             </li>
           </ul>
         </div>
+        <div class="footer-sub">
+          <p class="footer-title">Subscribe</p>
+          <form class="footer-form"><input name="footer-email" placeholder="E-mail" type="email" class="footer-input">
+            <button type="submit" class="footer-button">
+              Subscribe
+              <svg class="footer-sub-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-plan"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
