--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="btn-close-modal" data-modal-close type="button">
-          <svg class="modal-icon" width="8" height="8">
+          <svg class="modal-icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
