--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link curent" href="./index.html">Studio</a>
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-link link curent" href="./portfolio.html">Portfolio</a>
